--- a/front/src/index.css
+++ b/front/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.div {
+  background-color: gray;
+  border: 2px solid black;
+  width: 7%;
+}
